2000-02-25  Ezra Peisach  <epeisach@mit.edu>

	* sserver.c (main): Return type should be int, not void. Clenup
	unused variables.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)
		Add a MY_SUBDIRS macro set to '.' to indicate that there
		are no subdirectories to be processed by the Makefile.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sserver.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Wed Feb 18 15:33:15 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Feb  4 20:47:55 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Dec  5 19:44:05 1996  Tom Yu  <tlyu@mit.edu>

	* sserver.M: remove ref's to "/krb5" [PR 279]

	* sserver.M: v5srvtab -> krb5.keytab; also kdb5_edit -> kadmin [PR
	279]

Thu Nov  7 15:24:43 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sserver.c (main): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Tue Sep 10 14:09:19 1996  Tom Yu  <tlyu@mit.edu>

	* sserver.M: remove ".so man1/header.doc"

Sat Sep 16 00:21:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sserver.c (main): Allow the user to specify the service instance
		using the -s option.  Use SO_REUSEEADDR so that the port
		can be immediately reused.  Free the context and
		auth_context before exiting.
