@@ -1,3 +1,10 @@
+2000-07-28  Ezra Peisach  <epeisach@mit.edu>
+
+	* sserver.c (main): Include unistd.h if present (for close
+	prototype).  Change variable named sin (shadows maht
+	library). Compiler warning cleanups.
+
+
 2000-02-25  Ezra Peisach  <epeisach@mit.edu>
 
 	* sserver.c (main): Return type should be int, not void. Clenup
